New object added to overridden collection doesn't show up in linking file on Resync. #86501

Closed
opened 2021-03-11 15:21:37 +01:00 by Demeter Dzadik · 9 comments
Member

The Sprite recently got retopologized and all of its objects were replaced. Almost everything seems to be working fine, but for some reason his eyebrows are not showing up! There are also crashes in this file which I feel might be related, so I'm keeping this as one report, let me know if it's actually a separate issue and this should be split in two reports?

Linked file: SpriteFright/pro/lib/char/sprite/sprite.blend
Linking file: SpriteFright/bugs/11-rextoria_death_crash_when_resyncing_all_sprites_twice.blend (now minimized to just 1 sprite)

Repro steps:

  • Note that there is no object named GEO-sprite_eyebrows.
  • Reset Library Override Hierarchy makes the eyebrows show up which is good, but we don't want to reset here. (the production file has a dozen sprites, all of them are missing eyebrows atm)
  • Ctrl+Z
  • Resync Library Override Hierarchy doesn't bring the eyebrows, but my understanding is that it should.
  • Resyncing for a 2nd time should never be needed ofc, but, if you do it, it crashes.

CC @mont29

The Sprite recently got retopologized and all of its objects were replaced. Almost everything seems to be working fine, but for some reason his eyebrows are not showing up! There are also crashes in this file which I feel might be related, so I'm keeping this as one report, let me know if it's actually a separate issue and this should be split in two reports? Linked file: `SpriteFright/pro/lib/char/sprite/sprite.blend` Linking file: `SpriteFright/bugs/11-rextoria_death_crash_when_resyncing_all_sprites_twice.blend` (now minimized to just 1 sprite) **Repro steps**: - Note that there is no object named GEO-sprite_eyebrows. - Reset Library Override Hierarchy makes the eyebrows show up which is good, but we don't want to reset here. (the production file has a dozen sprites, all of them are missing eyebrows atm) - Ctrl+Z - Resync Library Override Hierarchy doesn't bring the eyebrows, but my understanding is that it should. - Resyncing for a 2nd time should never be needed ofc, but, if you do it, it crashes. CC @mont29
Author
Member

Added subscribers: @mont29, @Mets

Added subscribers: @mont29, @Mets

So... Afaict, this file has been saved with broken (needing resync) overrides before new handling of ID pointers overrides was added (in January 25th, 2a81d948ad).

This issue exposes several problems:

  • Weakness in resync code (using freed data pointers), am going to fix that first, this is the cause of the crash. However, this will not fix resync itself, as in, it will not generate a proper override.
  • Then, we need a way to fix those older broken files without having to fully reset/resync them. Think this is doable, albeit it could meaning losing some of the override data (specifically, if user had manually changed some ID pointers, like changing the action of a data-block e.g., this (the action assignment) would have to be re-done.
So... Afaict, this file has been saved with broken (needing resync) overrides before new handling of ID pointers overrides was added (in January 25th, 2a81d948ad). This issue exposes several problems: * Weakness in resync code (using freed data pointers), am going to fix that first, this is the cause of the crash. However, this will not fix resync itself, as in, it will not generate a proper override. * Then, we need a way to fix those older broken files without having to fully reset/resync them. Think this is doable, albeit it could meaning losing some of the override data (specifically, if user had manually changed some ID pointers, like changing the action of a data-block e.g., this (the action assignment) would have to be re-done.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Havent checked myself, but this sounds like it can be confirmed.

Havent checked myself, but this sounds like it can be confirmed.

And marked as bug indeed ;)

And marked as bug indeed ;)

This issue was referenced by 74557ca4f7

This issue was referenced by 74557ca4f7cfe14090d6ca245e03e651b4b2524f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-03-12 12:42:27 +01:00
Author
Member

File currently crashes on my PC, posting stack trace as discussed IRL :)

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00000000039cbe20 in collection_object_add (bmain=0x7fffb7eb4008, 
    collection=0x7fffb7ec5008, ob=0x0, flag=0, add_us=true)
    at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/collection.c:1023
1023	  if (ob->instance_collection) {
#0  0x00000000039cbe20 in collection_object_add
    (bmain=0x7fffb7eb4008, collection=0x7fffb7ec5008, ob=0x0, flag=0, add_us=true)
    at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/collection.c:1023
#1  0x00000000039cc215 in BKE_collection_object_add_from
    (bmain=0x7fffb7eb4008, scene=0x7fffbaaa6808, ob_src=0x7fff8b01ca08, ob_dst=0x0)
    at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/collection.c:1132
#2  0x000000000351076b in lib_override_library_create_post_process
    (bmain=0x7fffb7eb4008, scene=0x7fffbaaa6808, view_layer=0x7fffb7e41ec8, id_root=0x7fff8b01ca08, id_reference=0x0)
--Type <RET> for more, q to quit, c to continue without paging--c
    at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/lib_override.c:695
- 3  0x00000000035119ae in BKE_lib_override_library_resync (bmain=0x7fffb7eb4008, scene=0x7fffbaaa6808, view_layer=0x7fffb7e41ec8, id_root=0x0, do_hierarchy_enforce=false) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/lib_override.c:1043
- 4  0x000000000351201d in BKE_lib_override_library_main_resync (bmain=0x7fffb7eb4008, scene=0x7fffbaaa6808, view_layer=0x7fffb7e41ec8) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/lib_override.c:1154
- 5  0x0000000004d765ba in setup_app_data (C=0x7ffff4701ee8, bfd=0x7fffb7eab408, params=0x7fffffffd728, reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/blendfile.c:399
- 6  0x0000000004d76625 in setup_app_blend_file_data (C=0x7ffff4701ee8, bfd=0x7fffb7eab408, params=0x7fffffffd728, reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/blendfile.c:415
- 7  0x0000000004d7671e in BKE_blendfile_read_setup_ex (C=0x7ffff4701ee8, bfd=0x7fffb7eab408, params=0x7fffffffd728, reports=0x7fffc4a45f88, startup_update_defaults=false, startup_app_template=0x0) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/blendfile.c:453
- 8  0x0000000004d7676d in BKE_blendfile_read_setup (C=0x7ffff4701ee8, bfd=0x7fffb7eab408, params=0x7fffffffd728, reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/blendfile.c:462
- 9  0x0000000003ae4bb2 in WM_file_read (C=0x7ffff4701ee8, filepath=0x7fffffffd7c0 "/home/guest/SVN/SpriteFright/bugs/11-rextoria_death_crash_when_resyncing_all_sprites_twice.blend", reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:775
- 10 0x0000000003ae8332 in wm_file_read_opwrap (C=0x7ffff4701ee8, filepath=0x7fffffffd7c0 "/home/guest/SVN/SpriteFright/bugs/11-rextoria_death_crash_when_resyncing_all_sprites_twice.blend", reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2243
- 11 0x0000000003ae888b in wm_open_mainfile__open (C=0x7ffff4701ee8, op=0x7fffc48415c8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2371
- 12 0x0000000003ae8484 in operator_state_dispatch (C=0x7ffff4701ee8, op=0x7fffc48415c8, targets=0x14ff20a0 <wm_open_mainfile_dispatch_targets>) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2279
- 13 0x0000000003ae8952 in wm_open_mainfile_dispatch (C=0x7ffff4701ee8, op=0x7fffc48415c8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2395
- 14 0x0000000003ae861d in wm_open_mainfile__discard_changes (C=0x7ffff4701ee8, op=0x7fffc48415c8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2324
- 15 0x0000000003ae8484 in operator_state_dispatch (C=0x7ffff4701ee8, op=0x7fffc48415c8, targets=0x14ff20a0 <wm_open_mainfile_dispatch_targets>) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2279
- 16 0x0000000003ae8952 in wm_open_mainfile_dispatch (C=0x7ffff4701ee8, op=0x7fffc48415c8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2395
- 17 0x0000000003ae897f in wm_open_mainfile_invoke (C=0x7ffff4701ee8, op=0x7fffc48415c8, UNUSED_event=0x7ffff4839388) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2400
- 18 0x0000000003ad9152 in wm_operator_invoke (C=0x7ffff4701ee8, ot=0x7ffff724ef48, event=0x7ffff4839388, properties=0x7fffffffdf10, reports=0x0, poll_only=false, use_last_properties=true) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:1350
- 19 0x0000000003ad9a0b in wm_operator_call_internal (C=0x7ffff4701ee8, ot=0x7ffff724ef48, properties=0x7fffffffdf10, reports=0x0, context=0, poll_only=false, event=0x7ffff4839388) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:1591
- 20 0x0000000003ad9aa1 in WM_operator_name_call_ptr (C=0x7ffff4701ee8, ot=0x7ffff724ef48, context=0, properties=0x7fffffffdf10) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:1605
- 21 0x0000000004a79ebe in ui_apply_but_funcs_after (C=0x7ffff4701ee8) at /media/data/blender_guest/blender_master/source/blender/editors/interface/interface_handlers.c:937
- 22 0x0000000004a95d70 in ui_handler_region_menu (C=0x7ffff4701ee8, event=0x7fffb77d1328, UNUSED_userdata=0x7fffc49a5708) at /media/data/blender_guest/blender_master/source/blender/editors/interface/interface_handlers.c:10863
- 23 0x0000000003ad7640 in wm_handler_ui_call (C=0x7ffff4701ee8, handler=0x7fffb7429fe8, event=0x7fffb77d1328, always_pass=0) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:693
- 24 0x0000000003add136 in wm_handlers_do_intern (C=0x7ffff4701ee8, event=0x7fffb77d1328, handlers=0x7ffff4d9a418) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:2843
- 25 0x0000000003add668 in wm_handlers_do (C=0x7ffff4701ee8, event=0x7fffb77d1328, handlers=0x7ffff4d9a418) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:2959
- 26 0x0000000003ade95c in wm_event_do_handlers (C=0x7ffff4701ee8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:3376
- 27 0x0000000003ad1d77 in WM_main (C=0x7ffff4701ee8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm.c:643
- 28 0x000000000348bff5 in main (argc=1, argv=0x7fffffffe518) at /media/data/blender_guest/blender_master/source/creator/creator.c:520
File currently crashes on my PC, posting stack trace as discussed IRL :) ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00000000039cbe20 in collection_object_add (bmain=0x7fffb7eb4008, collection=0x7fffb7ec5008, ob=0x0, flag=0, add_us=true) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/collection.c:1023 1023 if (ob->instance_collection) { #0 0x00000000039cbe20 in collection_object_add (bmain=0x7fffb7eb4008, collection=0x7fffb7ec5008, ob=0x0, flag=0, add_us=true) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/collection.c:1023 #1 0x00000000039cc215 in BKE_collection_object_add_from (bmain=0x7fffb7eb4008, scene=0x7fffbaaa6808, ob_src=0x7fff8b01ca08, ob_dst=0x0) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/collection.c:1132 #2 0x000000000351076b in lib_override_library_create_post_process (bmain=0x7fffb7eb4008, scene=0x7fffbaaa6808, view_layer=0x7fffb7e41ec8, id_root=0x7fff8b01ca08, id_reference=0x0) --Type <RET> for more, q to quit, c to continue without paging--c at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/lib_override.c:695 - 3 0x00000000035119ae in BKE_lib_override_library_resync (bmain=0x7fffb7eb4008, scene=0x7fffbaaa6808, view_layer=0x7fffb7e41ec8, id_root=0x0, do_hierarchy_enforce=false) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/lib_override.c:1043 - 4 0x000000000351201d in BKE_lib_override_library_main_resync (bmain=0x7fffb7eb4008, scene=0x7fffbaaa6808, view_layer=0x7fffb7e41ec8) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/lib_override.c:1154 - 5 0x0000000004d765ba in setup_app_data (C=0x7ffff4701ee8, bfd=0x7fffb7eab408, params=0x7fffffffd728, reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/blendfile.c:399 - 6 0x0000000004d76625 in setup_app_blend_file_data (C=0x7ffff4701ee8, bfd=0x7fffb7eab408, params=0x7fffffffd728, reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/blendfile.c:415 - 7 0x0000000004d7671e in BKE_blendfile_read_setup_ex (C=0x7ffff4701ee8, bfd=0x7fffb7eab408, params=0x7fffffffd728, reports=0x7fffc4a45f88, startup_update_defaults=false, startup_app_template=0x0) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/blendfile.c:453 - 8 0x0000000004d7676d in BKE_blendfile_read_setup (C=0x7ffff4701ee8, bfd=0x7fffb7eab408, params=0x7fffffffd728, reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/blenkernel/intern/blendfile.c:462 - 9 0x0000000003ae4bb2 in WM_file_read (C=0x7ffff4701ee8, filepath=0x7fffffffd7c0 "/home/guest/SVN/SpriteFright/bugs/11-rextoria_death_crash_when_resyncing_all_sprites_twice.blend", reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:775 - 10 0x0000000003ae8332 in wm_file_read_opwrap (C=0x7ffff4701ee8, filepath=0x7fffffffd7c0 "/home/guest/SVN/SpriteFright/bugs/11-rextoria_death_crash_when_resyncing_all_sprites_twice.blend", reports=0x7fffc4a45f88) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2243 - 11 0x0000000003ae888b in wm_open_mainfile__open (C=0x7ffff4701ee8, op=0x7fffc48415c8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2371 - 12 0x0000000003ae8484 in operator_state_dispatch (C=0x7ffff4701ee8, op=0x7fffc48415c8, targets=0x14ff20a0 <wm_open_mainfile_dispatch_targets>) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2279 - 13 0x0000000003ae8952 in wm_open_mainfile_dispatch (C=0x7ffff4701ee8, op=0x7fffc48415c8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2395 - 14 0x0000000003ae861d in wm_open_mainfile__discard_changes (C=0x7ffff4701ee8, op=0x7fffc48415c8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2324 - 15 0x0000000003ae8484 in operator_state_dispatch (C=0x7ffff4701ee8, op=0x7fffc48415c8, targets=0x14ff20a0 <wm_open_mainfile_dispatch_targets>) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2279 - 16 0x0000000003ae8952 in wm_open_mainfile_dispatch (C=0x7ffff4701ee8, op=0x7fffc48415c8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2395 - 17 0x0000000003ae897f in wm_open_mainfile_invoke (C=0x7ffff4701ee8, op=0x7fffc48415c8, UNUSED_event=0x7ffff4839388) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_files.c:2400 - 18 0x0000000003ad9152 in wm_operator_invoke (C=0x7ffff4701ee8, ot=0x7ffff724ef48, event=0x7ffff4839388, properties=0x7fffffffdf10, reports=0x0, poll_only=false, use_last_properties=true) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:1350 - 19 0x0000000003ad9a0b in wm_operator_call_internal (C=0x7ffff4701ee8, ot=0x7ffff724ef48, properties=0x7fffffffdf10, reports=0x0, context=0, poll_only=false, event=0x7ffff4839388) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:1591 - 20 0x0000000003ad9aa1 in WM_operator_name_call_ptr (C=0x7ffff4701ee8, ot=0x7ffff724ef48, context=0, properties=0x7fffffffdf10) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:1605 - 21 0x0000000004a79ebe in ui_apply_but_funcs_after (C=0x7ffff4701ee8) at /media/data/blender_guest/blender_master/source/blender/editors/interface/interface_handlers.c:937 - 22 0x0000000004a95d70 in ui_handler_region_menu (C=0x7ffff4701ee8, event=0x7fffb77d1328, UNUSED_userdata=0x7fffc49a5708) at /media/data/blender_guest/blender_master/source/blender/editors/interface/interface_handlers.c:10863 - 23 0x0000000003ad7640 in wm_handler_ui_call (C=0x7ffff4701ee8, handler=0x7fffb7429fe8, event=0x7fffb77d1328, always_pass=0) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:693 - 24 0x0000000003add136 in wm_handlers_do_intern (C=0x7ffff4701ee8, event=0x7fffb77d1328, handlers=0x7ffff4d9a418) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:2843 - 25 0x0000000003add668 in wm_handlers_do (C=0x7ffff4701ee8, event=0x7fffb77d1328, handlers=0x7ffff4d9a418) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:2959 - 26 0x0000000003ade95c in wm_event_do_handlers (C=0x7ffff4701ee8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm_event_system.c:3376 - 27 0x0000000003ad1d77 in WM_main (C=0x7ffff4701ee8) at /media/data/blender_guest/blender_master/source/blender/windowmanager/intern/wm.c:643 - 28 0x000000000348bff5 in main (argc=1, argv=0x7fffffffe518) at /media/data/blender_guest/blender_master/source/creator/creator.c:520 ```
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86501
No description provided.